Fix white text on IE

--- a/style.css
+++ b/style.css
@@ -91,7 +91,8 @@ em {
 }
 
 .inverted * {
-    color: #fffffff0;
+    color: white;
+    opacity: 0.95;
 }
 
 .strip {
